--- a/Views/Interface/SuccessStoryButtonHeader.xaml
+++ b/Views/Interface/SuccessStoryButtonHeader.xaml
@@ -6,6 +6,10 @@
              xmlns:local="clr-namespace:SuccessStory.Views.Interface"
              mc:Ignorable="d">
 
+    <Button.Resources>
+        <FontFamily x:Key="font">pack://application:,,,/PluginCommon;component/Resources/font.ttf#font</FontFamily>
+    </Button.Resources>
+    
     <Button.Style>
         <Style TargetType="{x:Type Button}" BasedOn="{StaticResource BaseStyle}">
             <Setter Property="Background" Value="Transparent" />
@@ -42,7 +46,7 @@
         </Style>
     </Button.Style>
 
-    <TextBlock Name="btHeaderName" Text="S" FontSize="24" VerticalAlignment="Center" HorizontalAlignment="Center" FontFamily="/SuccessStory;component/Resources/#font">
+    <TextBlock Name="btHeaderName" Text="S" FontSize="24" VerticalAlignment="Center" HorizontalAlignment="Center" FontFamily="{StaticResource font}">
         <TextBlock.Style>
             <Style TargetType="TextBlock">
                 <Setter Property="Foreground" Value="{DynamicResource GlyphBrush}" />
