--- a/Views/SuccessStoryView.xaml
+++ b/Views/SuccessStoryView.xaml
@@ -1,5 +1,4 @@
-﻿<controls:WindowBase 
-    xmlns:controls="clr-namespace:Playnite.Controls;assembly=Playnite" x:Class="SuccessStory.SuccessView"
+﻿<Window x:Class="SuccessStory.SuccessView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -8,17 +7,15 @@
              xmlns:localLVC="clr-namespace:PluginCommon.LiveChartsCommon;assembly=PluginCommon"
              xmlns:lvc="clr-namespace:LiveCharts.Wpf;assembly=LiveCharts.Wpf"
              xmlns:localPlugin="clr-namespace:PluginCommon;assembly=PluginCommon"
-             mc:Ignorable="d" Height="740" Width="1260" Background="{DynamicResource WindowBackgourndBrush}"
+             mc:Ignorable="d" Height="760" Width="1280" Background="{DynamicResource WindowBackgourndBrush}"
              Title="Success Story"              
-             d:DesignStyle="{StaticResource WindowDesignStyle}"
-             Style="{DynamicResource StandardWindowStyle}"
-             ResizeMode="NoResize" WindowStartupLocation="CenterScreen" WindowStyle="None">
+             ResizeMode="NoResize" WindowStartupLocation="CenterScreen" WindowStyle="SingleBorderWindow">
 
-    <WindowBase.Resources>
+    <Window.Resources>
         <BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter" />
         <localPlugin:LocalDateTimeConverter x:Key="LocalDateTimeConverter" />
         <FontFamily x:Key="font">pack://application:,,,/PluginCommon;component/Resources/font.ttf#font</FontFamily>
-    </WindowBase.Resources>
+    </Window.Resources>
 
     <Grid Margin="10">
         <Grid.ColumnDefinitions>
@@ -206,4 +203,4 @@
             </Border>
         </DockPanel>
     </Grid>
-</controls:WindowBase>
+</Window>
