--- a/Views/SuccessStoryView.xaml
+++ b/Views/SuccessStoryView.xaml
@@ -41,10 +41,10 @@
                     <ColumnDefinition Width="180" />
                 </Grid.ColumnDefinitions>
 
-                <Label Grid.Column="0" Content="{DynamicResource LOCSucessStorySearch}" FontSize="16" Loaded="Label_Loaded" />
+                <Label Grid.Column="0" Content="{DynamicResource LOCSucessStorySearch}" FontSize="16" />
                 <TextBox Grid.Column="2" x:Name="TextboxSearch" TextWrapping="NoWrap" KeyUp="TextboxSearch_KeyUp" />
 
-                <Label Grid.Column="4" Content="{DynamicResource LOCSucessStoryFilterSource}" FontSize="16" Loaded="Label_Loaded" />
+                <Label Grid.Column="4" Content="{DynamicResource LOCSucessStoryFilterSource}" FontSize="16" />
                 <ComboBox Grid.Column="6" Name="FilterSource" IsEditable="True" IsReadOnly="True">
                     <ComboBox.ItemTemplate>
                         <DataTemplate>
