--- a/Views/Interface/SuccessStoryToggleButtonDetails.xaml
+++ b/Views/Interface/SuccessStoryToggleButtonDetails.xaml
@@ -6,6 +6,10 @@
              xmlns:local="clr-namespace:SuccessStory.Views.Interface"
              mc:Ignorable="d" Width="150" Height="40">
 
+    <ToggleButton.Resources>
+        <FontFamily x:Key="font">pack://application:,,,/PluginCommon;component/Resources/font.ttf#font</FontFamily>
+    </ToggleButton.Resources>
+
     <ToggleButton.Style>
         <Style TargetType="{x:Type ToggleButton}" BasedOn="{StaticResource BaseStyle}">
             <Setter Property="Background" Value="{DynamicResource NormalBrushDark}" />
@@ -35,6 +39,7 @@
 
     <Grid>
         <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="auto" />
             <ColumnDefinition Width="50" />
             <ColumnDefinition Width="3" />
             <ColumnDefinition Width="*" />
@@ -46,8 +51,8 @@
             <RowDefinition Height="18" />
         </Grid.RowDefinitions>
 
-
-        <Label Grid.Column="0" Grid.Row="0" Grid.ColumnSpan="3" Content="{DynamicResource LOCSucessStoryAchievements}" FontSize="10">
+        <Label Grid.Column="0" Grid.Row="0" Grid.RowSpan="3" Content="" FontFamily="{StaticResource font}" Name="Sc_Icon100Percent" 
+               VerticalAlignment="Center" FontSize="20" Margin="-3">
             <Label.Style>
                 <Style TargetType="Label">
                     <Setter Property="Padding" Value="5,3,5,5" />
@@ -64,7 +69,7 @@
             </Label.Style>
         </Label>
 
-        <Label Grid.Column="0" Grid.Row="2" Content="XXX/XXX" FontSize="10" Name="sc_labelButton">
+        <Label Grid.Column="1" Grid.Row="0" Grid.ColumnSpan="3" Content="{DynamicResource LOCSucessStoryAchievements}" FontSize="10">
             <Label.Style>
                 <Style TargetType="Label">
                     <Setter Property="Padding" Value="5,3,5,5" />
@@ -80,7 +85,24 @@
                 </Style>
             </Label.Style>
         </Label>
-        <ProgressBar Name="sc_pbButton" Grid.Column="2" Grid.Row="2" FontSize="10" Maximum="100" Value="30" Height="14"
+
+        <Label Grid.Column="1" Grid.Row="2" Content="XXX/XXX" FontSize="10" Name="sc_labelButton">
+            <Label.Style>
+                <Style TargetType="Label">
+                    <Setter Property="Padding" Value="5,3,5,5" />
+                    <Setter Property="Foreground" Value="{DynamicResource GlyphBrush}" />
+                    <Style.Triggers>
+                        <DataTrigger Binding="{Binding RelativeSource={RelativeSource AncestorType=ToggleButton}, Path=IsMouseOver}" Value="True">
+                            <Setter Property="Foreground" Value="{DynamicResource TextBrush}" />
+                        </DataTrigger>
+                        <DataTrigger Binding="{Binding RelativeSource={RelativeSource AncestorType=ToggleButton}, Path=IsChecked}" Value="True">
+                            <Setter Property="Foreground" Value="{DynamicResource TextBrush}" />
+                        </DataTrigger>
+                    </Style.Triggers>
+                </Style>
+            </Label.Style>
+        </Label>
+        <ProgressBar Name="sc_pbButton" Grid.Column="3" Grid.Row="2" FontSize="10" Maximum="100" Value="30" Height="14"
                      Margin="0,-1,0,0">
             <ProgressBar.Style>
                 <Style TargetType="ProgressBar">
