--- a/Views/SuccessStoryView.xaml
+++ b/Views/SuccessStoryView.xaml
@@ -1,15 +1,15 @@
 ﻿<Window x:Class="SuccessStory.SuccessView"
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:SuccessStory"
-             xmlns:localLVC="clr-namespace:PluginCommon.LiveChartsCommon;assembly=PluginCommon"
-             xmlns:lvc="clr-namespace:LiveCharts.Wpf;assembly=LiveCharts.Wpf"
-             xmlns:localPlugin="clr-namespace:PluginCommon;assembly=PluginCommon"
-             mc:Ignorable="d" Height="760" Width="1280" Background="{DynamicResource WindowBackgourndBrush}"
-             Title="Success Story"              
-             ResizeMode="NoResize" WindowStartupLocation="CenterScreen" WindowStyle="SingleBorderWindow">
+        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+        xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+        xmlns:local="clr-namespace:SuccessStory"
+        xmlns:localLVC="clr-namespace:PluginCommon.LiveChartsCommon;assembly=PluginCommon"
+        xmlns:lvc="clr-namespace:LiveCharts.Wpf;assembly=LiveCharts.Wpf"
+        xmlns:localPlugin="clr-namespace:PluginCommon;assembly=PluginCommon"
+        mc:Ignorable="d" Height="760" Width="1280" Background="{DynamicResource WindowBackgourndBrush}"
+        Title="Success Story"              
+        ResizeMode="NoResize" WindowStartupLocation="CenterScreen" WindowStyle="SingleBorderWindow">
 
     <Window.Resources>
         <BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter" />
@@ -137,6 +137,15 @@
                 <ListView x:Name="ListviewGames" Height="{Binding ElementName=lvGamesStackPanel, Path=ActualHeight}" SelectionChanged="ListviewGames_SelectionChanged" FontSize="24" GridViewColumnHeader.Click="ListviewGames_onHeaderClick">
                     <ListView.View>
                         <GridView>
+                            <GridViewColumn Width="46">
+                                <GridViewColumnHeader Name="lvGameIcon100Percent" Content="100%"></GridViewColumnHeader>
+                                <GridViewColumn.CellTemplate>
+                                    <DataTemplate>
+                                        <Image HorizontalAlignment="Center" Height="32" VerticalAlignment="Center" Width="32" Source="{Binding Icon100Percent}"/>
+                                    </DataTemplate>
+                                </GridViewColumn.CellTemplate>
+                            </GridViewColumn>
+                            
                             <GridViewColumn Width="50">
                                 <GridViewColumnHeader Name="lvGameIcon" Content="{DynamicResource LOCSucessStorylvGamesIcon}"></GridViewColumnHeader>
                                 <GridViewColumn.CellTemplate>
@@ -145,7 +154,8 @@
                                     </DataTemplate>
                                 </GridViewColumn.CellTemplate>
                             </GridViewColumn>
-                            <GridViewColumn Width="286" DisplayMemberBinding="{Binding Name}">
+                            
+                            <GridViewColumn Width="240" DisplayMemberBinding="{Binding Name}">
                                 <GridViewColumnHeader Name="lvName" Content="{DynamicResource LOCSucessStorylvGamesName}"></GridViewColumnHeader>
                             </GridViewColumn>
                             <GridViewColumn Width="150" DisplayMemberBinding="{Binding LastActivity, Converter={StaticResource LocalDateTimeConverter}}">
