--- a/Localization/LocSource.xaml
+++ b/Localization/LocSource.xaml
@@ -33,13 +33,6 @@
 
     <sys:String x:Key="LOCSucessStoryEnableRetroAchievementsView">Enable seprate view for RetroAchievements</sys:String>
 
-    <sys:String x:Key="LOCSucessStoryIncludeHiddenGames">Include hidden games</sys:String>
-    <sys:String x:Key="LOCSucessStoryAllUnlockedByMonth">Graphic with all unlocked achievements by month</sys:String>
-    <sys:String x:Key="LOCSucessStoryGameUnlockedByMonth">Graphic with all unlocked achievements by Day</sys:String>
-
-    <sys:String x:Key="LOCSucessStoryDefaultSorting">Default sorting</sys:String>
-    <sys:String x:Key="LOCSucessStoryIsAsc">Ascending</sys:String>
-
     <sys:String x:Key="LOCSucessStoryDatabase">Database manipulation</sys:String>
     <sys:String x:Key="LOCSuccessStoryGetData">Get data</sys:String>
     <sys:String x:Key="LOCSuccessStoryRefreshData">Refresh data</sys:String>
@@ -77,6 +70,20 @@
     <sys:String x:Key="LOCSucessStoryIntegrationProgressBarShowIndicator">Show indicator</sys:String>
     <sys:String x:Key="LOCSucessStoryIntegrationProgressBarShowPercent">Show percent</sys:String>
     <sys:String x:Key="LOCSucessStoryIntegrationListOptions">List achievements options</sys:String>
+
+    <sys:String x:Key="LOCSucessStoryViewsSettings">Extension view</sys:String>
+    <sys:String x:Key="LOCSuccessStoryEnableRaretyIndicator">Show rarety indicator on achievement</sys:String>
+    <sys:String x:Key="LOCSucessStoryListGames">List games</sys:String>
+    <sys:String x:Key="LOCSucessStoryDefaultSorting">Default sorting</sys:String>
+    <sys:String x:Key="LOCSucessStoryIsAsc">Ascending</sys:String>
+    <sys:String x:Key="LOCSucessStoryChartWithAllAchievements">Chart with all achievements</sys:String>
+
+    <sys:String x:Key="LOCSucessStoryListGamesFields">Game fields to be displayed:</sys:String>
+    <sys:String x:Key="LOCSuccessStoryGamesIcon100Percent">Icon 100% achievements</sys:String>
+
+    <sys:String x:Key="LOCSucessStoryIncludeHiddenGames">Include hidden games</sys:String>
+    <sys:String x:Key="LOCSucessStoryAllUnlockedByMonth">Graphic with all unlocked achievements by month</sys:String>
+    <sys:String x:Key="LOCSucessStoryGameUnlockedByMonth">Graphic with all unlocked achievements by Day</sys:String>
 
     <sys:String x:Key="LOCSucessStoryRefreshDataMessage">Achievements database has been reset.</sys:String>
 
