--- a/Localization/LocSource.xaml
+++ b/Localization/LocSource.xaml
@@ -98,6 +98,10 @@
     <sys:String x:Key="LOCSucessStoryRefreshDataInstalledRecentToolTip" xml:space="preserve">Reset and download achievements for installed games.&#x0a;(use if there are some problems with achievements)</sys:String>
     <sys:String x:Key="LOCSucessStoryRefreshAllDataToolTip" xml:space="preserve">Reset and download achievements for all games.&#x0a;(use if there are some problems with achievements)</sys:String>
 
+    <sys:String x:Key="LOCSucessStoryEnableImageCache">Enable caching achievements images (experimental)</sys:String>
+    <sys:String x:Key="LOCSucessStoryEnableImageCacheToolTip" xml:space="preserve">Experimental non-blocking process which can increase memory usage a bit when caching only.
+Especially useful for Xbox achievements  with their larges images which are reduced when caching.</sys:String>
+
     <!-- 
     SuccessStoryView 
     -->
